--- a/json/moreappindo.json
+++ b/json/moreappindo.json
@@ -5,7 +5,7 @@
       "id":1,
       "title":"More Apps",
       "image":"https://nussainc.github.io/img/all.webp",
-      "link":"https://play.google.com/store/apps/developer?id=Fake+Call+App"
+      "link":"https://play.google.com/store/apps/developer?id=Nussa+Inc"
     },
     {
       "id":6,
