--- a/json/moreapp.json
+++ b/json/moreapp.json
@@ -74,7 +74,7 @@
       "link":"https://play.google.com/store/apps/details?id=com.nussainc.blackpinklisachat"
     },
     {
-      "id":016,
+      "id":116,
       "title":"Cha Eun-woo",
       "image":"https://nussainc.github.io/img/chaeunwoochat.webp",
       "link":"https://play.google.com/store/apps/details?id=com.nussainc.chaeunwoochat"
@@ -99,13 +99,13 @@
     },
     {
       "id":19,
-      "title":"Dixie A'Amelio",
+      "title":"Dixie D'Amelio",
       "image":"https://nussainc.github.io/img/dixiedameliochat.webp",
       "link":"https://play.google.com/store/apps/details?id=com.nussainc.dixiedameliochat"
     },
     {
       "id":20,
-      "title":"Charlie A'Amelio",
+      "title":"Charlie D'Amelio",
       "image":"https://nussainc.github.io/img/charlidameliochat.webp",
       "link":"https://play.google.com/store/apps/details?id=com.nussainc.charlidameliochat"
     },
