--- a/json/moreapp.json
+++ b/json/moreapp.json
@@ -99,13 +99,13 @@
     },
     {
       "id":19,
-      "title":"Dixie D'Amelio",
+      "title":"Dixie DAmelio",
       "image":"https://nussainc.github.io/img/dixiedameliochat.webp",
       "link":"https://play.google.com/store/apps/details?id=com.nussainc.dixiedameliochat"
     },
     {
       "id":20,
-      "title":"Charlie D'Amelio",
+      "title":"Charlie DAmelio",
       "image":"https://nussainc.github.io/img/charlidameliochat.webp",
       "link":"https://play.google.com/store/apps/details?id=com.nussainc.charlidameliochat"
     },
