--- a/json/moreapp.json
+++ b/json/moreapp.json
@@ -17,13 +17,13 @@
       "id":6,
       "title":"Jimin BTS",
       "image":"https://nussainc.github.io/img/btsjiminchat.webp",
-      "link":"https://play.google.com/store/apps/details?id=com.nussainc.btsjiminchat"
+      "link":"https://play.google.com/store/apps/details?id=com.jamur.btsjimin"
     },
     {
       "id":7,
       "title":"Jungkook BTS",
       "image":"https://nussainc.github.io/img/btsjungkookchat.webp",
-      "link":"https://play.google.com/store/apps/details?id=com.nussainc.btsjungkookchat"
+      "link":"https://play.google.com/store/apps/details?id=com.jamur.btsjungkook"
     },
     {
       "id":8,
